--- a/assignments/assignment1/cs231n/datasets/cifar-10-batches-py/readme
+++ b/assignments/assignment1/cs231n/datasets/cifar-10-batches-py/readme
@@ -1,2 +1,2 @@
+. to download this data.Details about this assignment can be found [on the course webpage](http://cs231n.github.io/), under Assignment #1 of Spring 2024.
 
-Visit course website to download this data.
